# ugsys-identity-manager

./: .envrc  .gitguardian.yml  .gitignore  .gitleaks.toml  .gitleaksignore  Dockerfile.lambda  README.md  devbox.json  justfile  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.hypothesis/constants/: 02431bb096a1fbc6  030c00738a4bc014  102e70b28ea88515  118bb3d1fce2a710  12959633506cc7c9  1432bd682be39b51  2217613d255564f1  23953a8974da2fc9  27845d6152d39ae3  48a4e3d2d7362f9b  56ea053178d66d94  5997f3a5386e887c  5b088789961cd70d  5b9ffe04e3bb003e  5e2032e65206aa29  6118ef38a625f1dd  6128c7311c130998  6b0bf89d09258b65  6d8c5aa334d1abc5  70ac1a4f76f2d75a  72cbce7fbf618ff1  78747f5b650ada33  7e431a9535fa0e00  7f2474002cbeee84  7f386bfcd7d31cbf  891d67537ff194cb  9fec47860dc4f306  a2909aeb07d10899  aeab9f1356494fab  b48168e9892e46dc  b55fd7f2a11ce0a2  b63881bc46ee56fe  b6c455583159dfb7  c3ba05ceeb3ad756  d357de608baacc8b  d3bc6bcf0a893b84  d5e2515faaa2b2f9  da39a3ee5e6b4b0d  dc53c80d2cd3e65a  e043a129cacafc5c  (+5 more)
.hypothesis/examples/04e6b3400353b141/: 2ac20c08bb9e78cc  62bdd3791baf4ecd  8ff4e729436b348b  92afd713fe4d130c  b4f15a1fd1decd83  f4c2782f0ce9e19b
.hypothesis/examples/8ff4e729436b348b/: 002f7f68c907f8e0  0083d73e67d347f8  00e8af2e0aff3655  02edfc3a86008877  0378bc93579332ab  039d936fe80f8a8e  03a70b26789ef594  0531fcb0c0a4199f  05510add1ed4705e  0597baaba697a300  05a13b669dc86c60  05a42fd684ef9cb7  05a5218b1d177b6a  05e64300f28aa0fe  060e4d086a932eeb  06245d58813ffca3  06ffb475fd8fc0f0  075029f8f1b79b2e  077abbad87ac5714  07c90610a5091faa  0813652b00dbfe57  0875908e94eecaa0  08ab2f7d56011d57  095abf8342783707  0a6b14bf78f878c5  0b2386071a05ee4f  0bf97fdf563a6bf6  0c41f976202f80dd  0eb75a4b4c1b0054  108c96ecd70a440d  10a085f5dc1d612e  11c32f36e6d7de6d  12d2cad409dd19ce  15caea3adda804b7  167f2717b0756e54  17fa35d6e1e0576e  1979cb0774f466f3  19e6f139cca6a91d  19f4b73b1dc7e2af  1a940e4e2e8fe775  (+404 more)
.hypothesis/examples/92afd713fe4d130c/: d33f59e6413a34ae
.hypothesis/examples/f4c2782f0ce9e19b/: 00c9a82787b696b5  021c56dfd9ab6866  027190783b5060b7  029c68792b228a41  03310c11bd5b0fe3  0418be765fc2e201  0452f65df8e3f8e0  05424031eb7f87d8  060637734292f7cd  063344055d875785  072bd85a23f4d340  072d67fb9aab2bca  0822093a79e7795d  0918d2a2c71c06fe  09e319f1291c769e  09fc346a64da3c7a  0a385ffda144d45f  0acc9f431c0c0d10  0bbce041ae2f3ed1  0c2524d49c66ad0f  0c4a8b18fe735762  0c5f17f89b06ae70  0caefe14ec44a929  0cbda9184100d2eb  0d730c4d3a73dae9  0db357c607ab838d  0f9d865039d47e7d  10717ad01fdaf926  1145b10b9fa4f6e3  114d55cd96450702  11908dcf0b2b32ca  132b43dfbda84e85  13b8a8c6cb73d0bb  13cb66f8a0d62eef  13d85726bc07220f  1476376316c6a314  1490d7395d40d94c  1591a09997486c2d  159418e927485460  165d26ab59ed79f9  (+432 more)
.kiro/specs/auth-gap-closure/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/identity-manager-enterprise-patterns/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/identity-manager-hardening/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/identity-manager-phase1-completion/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/im-security-hardening/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: goals.md  security.md
scripts/: install-hooks.sh  migrate_from_registry.py  smoke_test.py
scripts/hooks/: pre-commit  pre-push
src/: config.py  main.py  main_outbox.py
src/api/: main.py
src/api/middleware/: logging.py
src/api/routers/: auth.py  users.py
src/application/commands/: admin_user.py  authenticate_user.py  logout.py  refresh_token.py  register_user.py  update_user.py  (+4 more)
src/domain/: exceptions.py
src/infrastructure/: logging.py  tracing.py
src/presentation/: response_envelope.py
tests/integration/: conftest.py  test_auth_flow.py  test_auth_http.py  test_auth_http_extra.py  test_dynamodb_outbox_repository.py  test_dynamodb_token_blacklist.py  test_dynamodb_user_repo.py  test_users_http.py  test_users_http_extra.py
tests/unit/: test_application_dtos.py  test_auth_service_dual_write.py  test_auth_service_locked_account.py  test_authenticate_user.py  test_config.py  test_domain.py  test_dynamodb_outbox_repository.py  test_dynamodb_unit_of_work.py  test_event_publisher.py  test_event_publisher_async.py  test_forgot_reset_password.py  test_interface_compliance.py  test_jwt_blacklist.py  test_jwt_token_service.py  test_list_users_roles.py  test_main.py  test_main_outbox.py  test_middleware.py  test_outbox_event.py  test_outbox_processor.py  test_outbox_repository.py  test_presentation_layer.py  test_refresh_token.py  test_register_user.py  test_tracing_middleware.py  test_unit_of_work.py  test_user_admin.py  test_user_repository_operations.py  test_user_service.py  test_validate_service_token.py  test_verify_email_logout.py  test_wiring_smoke.py
(+57 files in other folders)
